<resources>
    <string name="app_name">Morse</string>
    <string name="clear_button">clear button</string>
    <string name="encrypt">暗号化</string>
    <string name="decrypt">復号</string>
    <string name="input_hint">文字列を入力</string>
    <string name="ex_jp">あ(ア)</string>
    <string name="ex_en">ENG</string>
    <string name="play_button">play button</string>
    <string name="share_button">share button</string>
    <string name="copy_button">copy button</string>
    <string name="fill_button">fill button</string>
    <string name="vibration">vibration</string>
    <string name="flash">flash</string>
    <string name="volume">volume</string>
    <string name="morse_code">モールス符号表</string>
    <string name="history">変換履歴</string>
    <string name="share_title">変換結果の共有</string>
    <string name="only_result">結果のみ</string>
    <string name="before_and_after">[元の文] を [結果] に変換しました！</string>
</resources>